--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,8 @@
 </head>
 <%- include('../partials/nav.ejs') %>
 
+<%- include('../partials/form.ejs') %>
+
 <%- include('../partials/middle.ejs') %>
 
 <%- include('../partials/footer.ejs') %>
