--- a/views/partials/middle.ejs
+++ b/views/partials/middle.ejs
@@ -1,10 +1,12 @@
 <div class="container">
+run
     <% listings.forEach(function(listing) { %>
             <div class="col-md-4">
             <img src="<%= listing.images.picture_url %>" width="30%" />
             <strong><%= listing.name %></strong>
                 <p><%= listing.summary %></p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p>price is here<%= listing.price.$numberDecimal %></p>
+                <p><a class="btn btn-default" href="/db/get-one?_id=<%= listing._id %>" role="button">View details &raquo;</a></p>
             </div>
     <% }); %>
 </div>
